carvel/bundle/config/upstream/kubeflow/apps/volumes-web-app/upstream/overlays/istio/install_order.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: volumes-web-app
    kustomize.component: volumes-web-app
    run: volumes-web-app
  name: volumes-web-app-service
  namespace: kubeflow
  annotations:
    kapp.k14s.io/change-group: apps.kubeflow.org/order-11
    kapp.k14s.io/change-rule: upsert after upserting apps.kubeflow.org/order-10
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: volumes-web-app
    kustomize.component: volumes-web-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: volumes-web-app
    kustomize.component: volumes-web-app
  name: volumes-web-app-deployment
  namespace: kubeflow
  annotations:
    kapp.k14s.io/change-group: apps.kubeflow.org/order-11
    kapp.k14s.io/change-rule: upsert after upserting apps.kubeflow.org/order-10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: volumes-web-app
      kustomize.component: volumes-web-app
  template:
    metadata:
      labels:
        app: volumes-web-app
        kustomize.component: volumes-web-app
    spec:
      containers:
      - env:
        - name: APP_PREFIX
          value: /volumes
        - name: USERID_HEADER
          value: kubeflow-userid
        - name: USERID_PREFIX
          value: ""
        - name: APP_SECURE_COOKIES
          value: "true"
        - name: VOLUME_VIEWER_IMAGE
          value: filebrowser/filebrowser:v2.23.0
        image: docker.io/kubeflownotebookswg/volumes-web-app:v1.8.0
        name: volumes-web-app
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /etc/config/viewer-spec.yaml
          name: viewer-spec
          subPath: viewer-spec.yaml
      serviceAccountName: volumes-web-app-service-account
      volumes:
      - configMap:
          name: volumes-web-app-viewer-spec-gm954c98h6
        name: viewer-spec
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
    app: volumes-web-app
    kustomize.component: volumes-web-app
  name: volumes-web-app
  namespace: kubeflow
  annotations:
    kapp.k14s.io/change-group: apps.kubeflow.org/order-11
    kapp.k14s.io/change-rule: upsert after upserting apps.kubeflow.org/order-10
spec:
  host: volumes-web-app-service.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: volumes-web-app
    kustomize.component: volumes-web-app
  name: volumes-web-app-volumes-web-app
  namespace: kubeflow
  annotations:
    kapp.k14s.io/change-group: apps.kubeflow.org/order-11
    kapp.k14s.io/change-rule: upsert after upserting apps.kubeflow.org/order-10
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /volumes
    match:
    - uri:
        prefix: /volumes/
    rewrite:
      uri: /
    route:
    - destination:
        host: volumes-web-app-service.kubeflow.svc.cluster.local
        port:
          number: 80
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    app: volumes-web-app
    kustomize.component: volumes-web-app
  name: volumes-web-app
  namespace: kubeflow
  annotations:
    kapp.k14s.io/change-group: apps.kubeflow.org/order-11
    kapp.k14s.io/change-rule: upsert after upserting apps.kubeflow.org/order-10
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
  selector:
    matchLabels:
      app: volumes-web-app
